# life_detectors

./: .gitignore  README.md  README_batch_processing.md  batch_example.py  batch_process.py  batch_run.py  demo.py  display_parameter_sweep.py  pyproject.toml  readme_example_commands.txt  setup.py
data/: example_exoplanet_spectrum_Proof_of_Concept_R100_SN20.txt
dev_notebooks/: compare_felix_me.ipynb  dev_hdf5.ipynb  dev_nice_incident_laser.ipynb  dev_psg_flux_units.ipynb  dev_transmission_screens.ipynb  dev_transmission_screens.py  display_dc_degradation.ipynb  examine_hdf5_files.ipynb  nice_incident_laser.py  plot_2d_dc_contour_plots.py  psg_config_file_generator.py  s2n_plots.ipynb  systematics_format.ipynb  systematics_gallery.ipynb  visualize_ppop_output.ipynb
felix_detector_misc/: detector_requirement_eckhart.ipynb  jwst_zodi_measurements.csv  jwst_zodi_model.csv  noise_types_single_observation.ipynb
felix_fluxes_stars/: flux_at_aperture.ipynb  vizier_votable.vot
felix_yields/: catalog_custom_snr.ipynb
life_detectors/: __init__.py
modules/: __init__.py  classes_MyProject.plantuml  packages_MyProject.plantuml
notebooks/: DO_NOT_USE_display_1d_plots_from_parameter_sweep_cubes.ipynb  amp_cm2_conversion.ipynb  compare_felix_me.ipynb  dev_exozodi.ipynb  dev_hdf5.ipynb  dev_psg_config_file_generator.ipynb  dev_transmission_screens.ipynb  dev_zodiacal.ipynb  display_1d_plots_from_parameter_sweep_cubes.ipynb  display_parameter_sweep.py  exozodi.ipynb  exozodi.py  plotting_3d.py  psg_config_file_generator.py  s2n_degradation_and_acceptable_dc.py  s2n_plots.ipynb  (+3 more)
(+81 files in other folders)
